[update] factorize code